// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test <Markdown> component > allows a href with certain protocols 1`] = `
<DocumentFragment>
  <p>
    <a
      href="https://example.com"
    >
      Example link that should work.
    </a>
  </p>
</DocumentFragment>
`;

exports[`Test <Markdown> component > does not allow href with unknown protocols 1`] = `
<DocumentFragment>
  <p>
    <a>
      Example link that should not work.
    </a>
  </p>
</DocumentFragment>
`;

exports[`Test <Markdown> component > filters close-break tags 1`] = `
<DocumentFragment>
  <p>
    <br />
    sample text
    <br />
  </p>
</DocumentFragment>
`;

exports[`Test <Markdown> component > filters out disallowed tags 1`] = `
<DocumentFragment>
  <ul>
    

    <li>
      Markdown document
    </li>
    

  </ul>
</DocumentFragment>
`;

exports[`Test <Markdown> component > safely handles broken HTML tags 1`] = `
<DocumentFragment>
  <ul>
    

    <li>
      Markdown document

      <br />
      <br />
    </li>
    

    <li>
      test content
    </li>
    

  </ul>
</DocumentFragment>
`;
